# webbuchhaltung

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  cliff.toml  docker-compose.yml
agents/: backend.md  (+9 more)
src/backend/: Dockerfile  pyproject.toml
src/backend/alembic/versions/: 0001_initial_schema.py  0002_seed_data.py  0005_mandant_email_template.py  0006_asset_tables.py  0007_document_tables.py  0008_bank_tables.py  0009_vendor_tables.py
src/backend/app/: config.py  dependencies.py  errors.py  main.py
src/backend/app/models/: __init__.py  asset.py  bank.py  booking.py  document.py  invoice.py  mandant.py  vendor.py
src/backend/app/routers/: accounts.py  admin.py  assets.py  bank.py  bookings.py  customers.py  datev.py  documents.py  invoice_template.py  invoices.py  mandants.py  reports.py  setup.py  vendor_invoices.py  vendors.py
src/backend/app/schemas/: asset.py  bank.py  document.py  invoice.py  mandant.py  period.py  reports.py  vendor.py
src/backend/app/services/: account.py  asset.py  bank_import.py  bank_matching.py  booking.py  datev.py  document.py  document_storage.py  invoice_booking.py  invoice_email.py  invoice_sequence.py  llm_extraction.py  period.py  reports.py  sepa_xml.py  vendor_invoice.py
src/backend/seed/: skr03.json  skr04.json  tax_keys.json
src/backend/tests/: test_assets.py  test_bank.py  test_bookings.py  test_datev.py  test_documents.py  test_health.py  test_invoices.py  test_reports.py  test_reports_extended.py  test_vendor_invoices.py  test_vendors.py
(+190 files in other folders)
