[project]
name = "webbuchhaltung"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "anthropic>=0.25.0,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
